--- a/source/index.html
+++ b/source/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -8,7 +8,7 @@
     />
   </head>
 
-  <body>
+  <body style="margin: 0">
     <div id="app-placeholder"></div>
   </body>
 </html>
